force-app/main/default/objects/eCard_Bus_Discrepancy__x/eCard_Bus_Discrepancy__x.object-meta.xml
<CustomObject>
    <description>dw_view_ecard$ecard_bus_discrepancy</description>
    <externalDataSource>Heroku</externalDataSource>
    <externalName>dw_view_ecard$ecard_bus_discrepancy</externalName>
    <label>eCard_Bus_Discrepancy</label>
    <pluralLabel>eCard_Bus_Discrepancy</pluralLabel>
</CustomObject>