force-app/main/default/objects/eCard_Bus_Discrepancy__x/fields/bus_start_seq__c.field-meta.xml
<CustomField>
    <fullName>bus_start_seq__c</fullName>
    <description>bus_start_seq</description>
    <externalDeveloperName>bus_start_seq</externalDeveloperName>
    <label>bus_start_seq</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>