force-app/main/default/objects/eCard_Bus_Discrepancy__x/fields/component__c.field-meta.xml
<CustomField>
    <fullName>component__c</fullName>
    <description>component</description>
    <externalDeveloperName>component</externalDeveloperName>
    <label>component</label>
    <length>200</length>
    <type>Text</type>
</CustomField>