force-app/main/default/objects/eCard_Bus_Discrepancy__x/fields/discrepancy_priority__c.field-meta.xml
<CustomField>
    <fullName>discrepancy_priority__c</fullName>
    <description>discrepancy_priority</description>
    <externalDeveloperName>discrepancy_priority</externalDeveloperName>
    <label>discrepancy_priority</label>
    <length>20</length>
    <type>Text</type>
</CustomField>