force-app/main/default/objects/eCard_Bus_Discrepancy__x/fields/foreman1__c.field-meta.xml
<CustomField>
    <fullName>foreman1__c</fullName>
    <description>foreman1</description>
    <externalDeveloperName>foreman1</externalDeveloperName>
    <label>foreman1</label>
    <length>254</length>
    <type>Text</type>
</CustomField>