force-app/main/default/objects/eCard_Bus_Discrepancy__x/fields/foreman4__c.field-meta.xml
<CustomField>
    <fullName>foreman4__c</fullName>
    <description>foreman4</description>
    <externalDeveloperName>foreman4</externalDeveloperName>
    <label>foreman4</label>
    <length>254</length>
    <type>Text</type>
</CustomField>