force-app/main/default/objects/eCard_Bus_Discrepancy__x/fields/foreman5__c.field-meta.xml
<CustomField>
    <fullName>foreman5__c</fullName>
    <description>foreman5</description>
    <externalDeveloperName>foreman5</externalDeveloperName>
    <label>foreman5</label>
    <length>254</length>
    <type>Text</type>
</CustomField>