force-app/main/default/objects/eCard_Bus_Discrepancy__x/fields/io_program__c.field-meta.xml
<CustomField>
    <fullName>io_program__c</fullName>
    <description>io_program</description>
    <externalDeveloperName>io_program</externalDeveloperName>
    <label>io_program</label>
    <length>200</length>
    <type>Text</type>
</CustomField>