force-app/main/default/objects/eCard_Bus_Discrepancy__x/fields/odometer__c.field-meta.xml
<CustomField>
    <fullName>odometer__c</fullName>
    <description>odometer</description>
    <externalDeveloperName>odometer</externalDeveloperName>
    <label>odometer</label>
    <length>200</length>
    <type>Text</type>
</CustomField>