force-app/main/default/objects/eCard_Bus_Discrepancy__x/fields/operation__c.field-meta.xml
<CustomField>
    <fullName>operation__c</fullName>
    <description>operation</description>
    <externalDeveloperName>operation</externalDeveloperName>
    <label>operation</label>
    <length>200</length>
    <type>Text</type>
</CustomField>