force-app/main/default/objects/eCard_Bus_Discrepancy__x/fields/resolved_status_updated_by__c.field-meta.xml
<CustomField>
    <fullName>resolved_status_updated_by__c</fullName>
    <description>resolved_status_updated_by</description>
    <externalDeveloperName>resolved_status_updated_by</externalDeveloperName>
    <label>resolved_status_updated_by</label>
    <length>254</length>
    <type>Text</type>
</CustomField>