force-app/main/default/objects/eCard_Bus_Discrepancy__x/fields/root_cause__c.field-meta.xml
<CustomField>
    <fullName>root_cause__c</fullName>
    <description>root_cause</description>
    <externalDeveloperName>root_cause</externalDeveloperName>
    <label>root_cause</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>