force-app/main/default/objects/eCard_Bus_Discrepancy__x/fields/schedule_date__c.field-meta.xml
<CustomField>
    <fullName>schedule_date__c</fullName>
    <description>schedule_date</description>
    <externalDeveloperName>schedule_date</externalDeveloperName>
    <label>schedule_date</label>
    <type>Date</type>
</CustomField>